# maestro

./: .gitignore  .golangci.yml  Cargo.toml  LICENSE  README.md  api.go  build.py  build.sh  ci_verify.sh  commands.go  commands_test.go  compose.go  config.go  config_test.go  context.go  exec.go  frontend.go  frontend_test.go  git.go  go.mod  go.sum  go.work  gradle.go  healthcheck.go  healthcheck_test.go  install.bat  install.sh  logging.go  logging_test.go  logs.go  logs_test.go  maestro.go  maestro_test.go  npm.go  orchestrate.go  process.go  process_test.go  release.toml  service.go  service_test.go  (+1 more)
.github/workflows/: changelog_get.sh  ci_verify.yml  cicd.yml  crate_publish.yml  create_gh_release.sh  frontend.yml  gh_release.yml  publish.yml  release.yml  release_notes.yml  tag.yml  test.yml  verify.yml  www.yml
cli/: CHANGELOG.md  Cargo.toml  README.md
cli/src/: main.rs
cli/src/git/: indicator.rs  mod.rs  print.rs
cli/src/git/interactive/: mod.rs  result_listing.rs  result_summary.rs
composable/: composable.go  composable_test.go  composition.go  exec.go  exec_test.go  go.mod  go.sum  healthcheck.go  healthcheck_test.go  http.go  http_test.go  logging.go  process.go  process_test.go
frontend/: .gitignore  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  vite.config.ts  webpack.config.js
frontend/src/: Maestro.jsx  app.html  index.html
frontend/tests/: test.ts
git/: CHANGELOG.md  Cargo.toml  README.md  git.go  git_test.go  go.mod  go.sum  repository.go  repository_test.go  scan.go  scan_test.go  workspace.go  workspace_test.go
git/examples/: sync_repos.rs
git/src/: find.rs  host.rs  host_test.rs  lib.rs  pull.rs  pull_test.rs  status.rs  status_test.rs  testing.rs
integration/: integration.go
integration/npm/: index.js  maestro.yaml  package.json  verify.go
integration/rust/: Cargo.toml  maestro.yaml  verify.go
integration/rust/src/: main.rs
testutil/: fs_util.go  git_util.go  go.mod
util/: go.mod  go.sum  log.go  test_util.go  util.go  util_test.go
www/: index.css  index.html  index.js  install.sh  manifest.json  package.json  pnpm-lock.yaml  tsconfig.json
www/public/: install.sh
www/src/: env.d.ts  global.css
www/src/components/: footer.astro  header.astro
www/src/components/install/: quickstart.astro  shell_command.astro
www/src/components/terminal/: button.astro  card.astro  content.astro  toolbar.astro
www/src/pages/: index.astro
