[package]
name = "maestro"
version = "0.2.2-alpha.7"
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "maestro"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.31", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
maestro_git = { path = "../git", version = "0.2.2-alpha.7" }
open = "5.3.2"
ratatui = "0.29.0"
tokio = { workspace = true }
