[package]
name = "maestro_git"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
git2 = { version = "0.20.0", features = ["ssh", "vendored-libgit2"] }
openssl = { version = "0.10.71", features = ["vendored"] }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
temp-dir = "0.1.14"
