[package]
name = "maestro_git"
version = "0.1.0"
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
git2 = { version = "0.20.0", features = ["ssh", "vendored-libgit2"] }
openssl = { version = "0.10.71", features = ["vendored"] }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
temp-dir = "0.1.14"
